# direct-visual-odometry

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
data/KINECT_1DEG/: info.txt  sh
data/KINECT_50MM/: info.txt
data/KINECT_5MM/: info.txt
data/kinectv2_00/: info.txt
data/kinectv2_01/: info.txt
data/logicool0/: info.txt
data/logicool1/: info.txt
data/logicool2/: info.txt
include/: converter.hpp  frame.hpp  math.hpp  params.hpp
include/core/: convert.hpp  draw.hpp  io.hpp  loader.hpp  math.hpp  params.hpp  timer.hpp  transform.hpp
include/map/: implement.hpp  mapper.hpp  updater.hpp
include/math/: constexpr.hpp  gaussian.hpp  math.hpp  se3.hpp  util.hpp
include/system/: frame.hpp  system.hpp
include/track/: frame.hpp  optimize.hpp  tracker.hpp
src/: converter.cpp  math.cpp  params.cpp  transform.cpp
src/core/: convert.cpp  draw.cpp  loader.cpp  math.cpp  params.cpp  transform.cpp
src/map/: implement.cpp  mapper.cpp  updater.cpp
src/math/: gaussian.cpp  se3.cpp
src/system/: frame.cpp
src/track/: frame.cpp  optimize.cpp  tracker.cpp
test/: axis_map.cpp  generator.cpp  gradient.cpp  kinect-vo.cpp  kinect_record.cpp  load.cpp  map.cpp  map_depth_to_gray.cpp  omp.cpp  propagate.cpp  record.cpp  refined_tracking.cpp  regularize.cpp  se3.cpp  sequence.cpp  step.cpp  track.cpp  tracking.cpp  update.cpp  warp.cpp
